contrib/tektoncd/tektoncd-dashboard/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tektoncd-dashboard
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tektoncd-dashboard
    rewrite:
      uri: /tektoncd-dashboard
    route:
    - destination:
        host: tekton-dashboard.$(namespace).svc.$(clusterDomain)
        port:
          number: 80
    timeout: 300s
